2006-10-05 03:03:27  Sean Middleditch <elanthis@awesomeplay.com>

  * Fix the network code to use a vector of bytes instead of a
    StringBuffer for output buffering, so that we can use embedded
    NUL bytes again, so that ZMP works.

2006-10-01 07:54:48  Sean Middleditch <elanthis@awesomeplay.com>

  * Show the direction of all exits in room lists.

2006-09-30 06:16:20  Sean Middleditch <elanthis@awesomeplay.com>

  * Don't require a room for events, since events like EnterZone
    for creatures just entering the game have no old room.
  * Added a new AI, monster.ai, which is a very simple "attack
    random player in room" AI.
  * Removed the foodchain stuff from npc.sx.
  * Added an attackRandomPlayer() method in npc.sx.
  * Fixed display of object descriptions in Creature::do_look().

2006-09-23 04:01:49  Sean Middleditch <elanthis@awesomeplay.com>

  * Added a created and last login time stamp to Player.
  * Added a total playtime field to Player.
  * Renamed start/quit in Player to start_session and end_session.

2006-09-22 17:30:56  Sean Middleditch <elanthis@awesomeplay.com>

  * Fixed player saving of stats, it was saving stat values as
    strings instead of as integers.
  * Added some functions to easily convert between time_t and
    String.
  * Added creation time and last login time tracking to accounts.

2006-09-21 02:57:37  Sean Middleditch <elanthis@awesomeplay.com>

  * Updated player and npc types to use the new fileobj list
    construct.
  * Updated the skill info format to prepare for pure-skill system,
    including dynamic XP pools and the removal of hard-coded stats.

2006-09-17 22:26:46  Sean Middleditch <elanthis@awesomeplay.com>

  * Added a new list type to the fileobj format, which is currently
    used by the races file.
  * Cleaned up the fileobj API to remove all legacy cruft.

2006-09-17 18:04:14  Sean Middleditch <elanthis@awesomeplay.com>

  * More work on updating the events in use.
